[project]
name = "folder-syncer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
    "lagom>=2.7.7",
    "pydanclick>=0.5.1",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
